--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,5 @@
-body { background-color: #F2F6D0 }
-      #wrapper {
+
+      .article-wrapper {
         width: 960px;
         margin-left: auto;
         margin-right: auto;
@@ -18,7 +18,6 @@ body { background-color: #F2F6D0 }
       textarea, input {
         display: block;
         width: 100%;
-        background-color: #FCF5C7;
       }
       input {
         height: 36px;
@@ -27,4 +26,8 @@ body { background-color: #F2F6D0 }
       textarea {
         height: 200px;
         font-size: 18px;
+      }
+
+      h1, h2 {
+        text-align: center;
       }
